test(#8279): chaos.serverOpts passes extra JVM options to every node
Space-separated -D<property>=<value> or -XX:<flag> options (no quotes or
spaces inside a value, since the server script word-splits) are appended
after the heap settings in ARCADEDB_OPTS_MEMORY, which the server script
places after JAVA_OPTS, so they override the harness defaults. Invalid
tokens are rejected. The option is part of the replay command when set.

Lets the same seed run against a server setting, e.g.
-Dchaos.serverOpts=-Darcadedb.ha.staleFollowerRecoveryDurationMs=10000.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>